Fixed spacing on mobile for favourite on buolding page

--- a/site/web/app/themes/host/assets/sass/components/_billboard.scss
+++ b/site/web/app/themes/host/assets/sass/components/_billboard.scss
@@ -70,6 +70,10 @@
     h2 {
         margin-top: $half-spacing-unit;
     }
+
+    @include mq($until: large) {
+        margin-bottom: $half-spacing-unit;
+    }
 }
 
 .billboard.box--grape {
